[package]
name = "multimedia-commons-meilisearch-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "rayon"] }
meilisearch-sdk = "0.30.0"
reqwest = { version = "0.12", features = ["json"] }
rusty-s3 = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
quick-xml = { version = "0.36", features = ["serialize"] }
